--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <meta property="og:type" content="website">
 
 
-<meta property="og:title" content="fuck you">
+<meta property="og:title" content="eh">
 
 <meta property="og:image" content="https://c.top4top.io/p_1677lte8j0.jpg">
 
-<meta property="og:description" content="your security get down">
+<meta property="og:description" content="u got stamped">
 
-<title>oops</title>
+<title>STAMPED BY JEKAY666GHOST</title>
 
 <style>
 @font-face{
@@ -56,7 +56,7 @@ color: aqua;
 <center>
 <pre><img src="https://j.top4top.io/p_16771htq10.jpg" width="950"/>
 
-<r>[|</r>Stamped by Jekay<r>|]</r>
+<r>[|</r>Stamped by JEKAY666GHOST<r>|]</r>
 <br>
 <r>-</r> Special Thanks To: <r>-</r>
 Black Coders Anonymous <r>|</r> Seven Ghost Team <r>|</r> Anon Ghost Team <r>|</r> Ghost Squad Hackers
@@ -102,3 +102,4 @@ Copyright &copy; 2019 Powered By @7ghost-Team</pre>
 
 </script></body>
 </html>
+
